add an x-breadcrumbs component

--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -20,3 +20,4 @@
 <link rel="import" href="demo-elements/x-user-numeric-view.html">
 <link rel="import" href="demo-elements/x-user-not-found-view.html">
 <link rel="import" href="demo-elements/x-login-view.html">
+<link rel="import" href="demo-elements/x-breadcrumbs.html">
