--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-snippet.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-ready-event-emitter.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-iframe-renderer-outlet.html">
+<script src="../../vaadin-demo-helpers/vaadin-demo-import.js"></script>
 
 <link rel="import" href="element-demo.html">
 <link rel="import" href="vaadin-router-demo-shared-styles.html">
