--- a/demo/vaadin-router-code-splitting-demos.html
+++ b/demo/vaadin-router-code-splitting-demos.html
@@ -12,14 +12,30 @@
       you to split your code into various bundles which can then be loaded on
       demand, Vaadin.Router can load these bundled lazily just-in-time before
       rendering a route.
-      In order to use this feature specify a bundle URL in the <code>bundle
-      </code> property of the route object.
+      In order to use this feature, specify a <code>bundle</code> property on the
+      route object, which should have the following structure:
+      <marked-element>
+        <script type="text/markdown">
+          ```js
+          {
+            bundle: {
+              url: '/app.js', // required, contains the bundle URL
+              type: 'module' // optional, default to "nomodule"
+            }
+          }
+          ```
+        </script>
+      </marked-element>
     </p>
     <p>
-      Note: If the bundle URL does not end with <code>.js</code> nor with <code>
-      .mjs</code>, Vaadin.Router throws an <code>Error</code> and does not
-      attempt to load it. Use a custom route action as shown in the next demo if
-      you need to load non-js bundles.
+      Support for ES module bundles can be achieved by setting <code>type</code> to
+      <code>module</code> explicitly, which will result in setting the corresponding
+      attribute on the <code>&lt;script&gt;</code> tag created by Vaadin.Router.
+      When using this feature, you should be sure about your browser support.
+    <p>
+      Note: If the bundle URL does not end with <code>.js</code>, Vaadin.Router throws
+      an <code>Error</code> and does not attempt to load it. Use a custom route action
+      as shown in the demo below, if you need to load non-js bundles.
     </p>
     <p>
       This demo shows how to load the <code>user.bundle.js</code>
@@ -41,7 +57,10 @@
             {path: '/', component: 'x-home-view'},
             {
               path: '/user/:id',
-              bundle: `${Vaadin.Demo.componentsRoot}/user.bundle.js`,
+              bundle: {
+                url: `${Vaadin.Demo.componentsRoot}/user.bundle.js`,
+                type: 'nomodule' // change to "module" for ES module
+              },
               component: 'x-user-js-bundle-view' // <-- defined in the bundle
             },
           ]);
@@ -94,6 +113,39 @@
       </template>
     </vaadin-demo-snippet>
 
+    <h3>Using Dynamic Imports</h3>
+    <p>
+      Vaadin.Router allows you to implement your own loading mechanism for bundles using
+      custom <a href="#vaadin-router-route-actions-demos">Route Actions</a>. In that case,
+      you can use <a href="https://github.com/tc39/proposal-dynamic-import" target="_blank"
+      rel="noopener">dynamic imports</a> and the module bundler to make the code work in browsers
+      not supporting them natively. Both Webpack and Polymer CLI support dynamic imports for lazy
+      loading ES modules, and transform them for the older browsers.
+    </p>
+    <vaadin-demo-snippet id="vaadin-router-code-splitting-3" iframe-src="iframe.html">
+      <template preserve-content>
+        <a href="/">Home</a>
+        <a href="/user/guest">User Profile</a>
+        <div id="outlet"></div>
+        <script type="module">
+          // import {Router} from '@vaadin/router';
+          const {Router} = window.Vaadin;
+
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', component: 'x-home-view'},
+            {
+              path: '/user/:id',
+              action: () => {
+                Vaadin.Demo.import(`${Vaadin.Demo.componentsRoot}/user.bundle.js`);
+              },
+              component: 'x-user-js-bundle-view' // <-- defined in the bundle
+            },
+          ]);
+        </script>
+      </template>
+    </vaadin-demo-snippet>
+
     <h3>Splitting and Lazy-Loading the Routes Configuration</h3>
     <p>
       Vaadin.Router supports splitting the routes configuration object into parts and lazily loading them on-demand,
@@ -110,7 +162,7 @@
       See the <a href="../#/classes/Vaadin.Router#method-setRoutes" target="_blank">API documentation</a>
       for detailed description of the <code>children</code> callback function.
     </p>
-    <vaadin-demo-snippet id="vaadin-router-code-splitting-3" iframe-src="iframe.html">
+    <vaadin-demo-snippet id="vaadin-router-code-splitting-4" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
         <a href="/users/guest">User Profile</a>
