--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -9,6 +9,10 @@
 <link rel="import" href="vaadin-router-demo-shared-styles.html">
 
 <script src="../dist/vaadin-router.umd.js"></script>
+<script>
+  // In order to make the demos work without the import statement there
+  window.Router = window.Vaadin.Router;
+</script>
 
 <link rel="import" href="demo-elements/x-home-view.html">
 <link rel="import" href="demo-elements/x-image-view.html">
