--- a/demo/vaadin-router-getting-started-demos.html
+++ b/demo/vaadin-router-getting-started-demos.html
@@ -51,7 +51,8 @@
         <main id="outlet"></main>
 
         <script>
-          // import {Router} from '@vaadin/router' / var Router = Vaadin.Router
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // var Router = Vaadin.Router; // for vaadin-router.umd.js
 
           // select the DOM node where the router inserts route Web Components
           const outlet = document.getElementById('outlet');
