remove `<script type="module">` from demo snippets
the default mode in demo snippets is using the UMD bundle

--- a/demo/vaadin-router-animated-transitions-demos.html
+++ b/demo/vaadin-router-animated-transitions-demos.html
@@ -26,7 +26,7 @@
         <a href="/image-125px">Image</a>
         <a href="/users">Users</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -98,7 +98,7 @@
     <vaadin-demo-snippet id="vaadin-router-animated-transitions-demos-2" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
