--- a/demo/vaadin-router-code-splitting-demos.html
+++ b/demo/vaadin-router-code-splitting-demos.html
@@ -48,7 +48,7 @@
         <a href="/">Home</a>
         <a href="/user/guest">User Profile</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -84,7 +84,7 @@
         <a href="/">Home</a>
         <a href="/user/admin">User Profile</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -124,7 +124,7 @@
         <a href="/">Home</a>
         <a href="/user/guest">User Profile</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -164,7 +164,7 @@
         <a href="/">Home</a>
         <a href="/users/guest">User Profile</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
