--- a/demo/vaadin-router-navigation-trigger-demos.html
+++ b/demo/vaadin-router-navigation-trigger-demos.html
@@ -55,7 +55,7 @@
     <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-1" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -87,7 +87,7 @@
         <a href="/">Home</a>
         <a href="/users">Users</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -126,7 +126,7 @@
           <li data-href="/users">Users</li>
         </ul>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
           const {POPSTATE} = Router.NavigationTrigger;
@@ -163,7 +163,7 @@
         <a href="/">Home</a>
         <a href="/users">Users</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
