--- a/demo/vaadin-router-redirect-demos.html
+++ b/demo/vaadin-router-redirect-demos.html
@@ -51,7 +51,7 @@
         <a href="/u/Kim">User profile</a>
         <a href="/data/entity/view/12">Knowledge Base</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
