--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -82,7 +82,7 @@
         </nav>
         <div id="stats"></div>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -137,7 +137,7 @@
           <a href="/users/kim">Kim (slight delay on open)</a>
         </nav>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -185,7 +185,7 @@
           <a href="/users/Kim">Redirect target</a>
         </nav>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -225,7 +225,7 @@
           <a href="/users/admin">Renders user info page</a>
         </nav>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
