--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -36,7 +36,7 @@
         <a href="/image-32px">Image 32px pink</a>
         <a href="/kb/animals/cats">Cats</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -79,7 +79,7 @@
         <a href="/projects/1">Project 1</a>
         <a href="/project/2">Project 2</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           Polymer({is: 'x-project-view'});
 
           // import {Router} from '@vaadin/router';
@@ -131,7 +131,7 @@
         <a href="/users">All Users</a>
         <a href="/kim">Kim</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -159,7 +159,7 @@
         <a href="/users/42">User 42</a>
         <a href="/users/guest">Guest</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
