--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -48,7 +48,7 @@
         <a href="/">Home</a>
         <a href="/go">Are you ready?</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           Polymer({
             is: 'x-countdown',
 
@@ -124,7 +124,7 @@
         <a href="/">Home</a>
         <a href="/friend">Meet a friend</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           Polymer({
             is: 'x-friend',
 
@@ -191,7 +191,7 @@
           </template>
         </dom-module>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           Polymer({
             is: 'x-user-manage',
             onBeforeLeave: function(context) {
@@ -243,7 +243,7 @@
     <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-4" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
@@ -292,7 +292,7 @@
         <a href="/">Home</a>
         <a href="/danger">Danger</a>
         <div id="outlet"></div>
-        <script type="module">
+        <script>
           Polymer({
             is: 'x-dangerous',
             onBeforeEnter: function(context) {
