--- a/demo/vaadin-router-getting-started-demos.html
+++ b/demo/vaadin-router-getting-started-demos.html
@@ -104,7 +104,8 @@
         <a href="/about">About</a>
         <div id="outlet"></div>
         <script>
-          // import {Router} from '@vaadin/router' / var Router = Vaadin.Router
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // var Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -132,7 +133,8 @@
         <a href="/users/kim">Kim</a>
         <div id="outlet"></div>
         <script>
-          // import {Router} from '@vaadin/router' / var Router = Vaadin.Router
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // var Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -165,7 +167,8 @@
         <div id="outlet"></div>
 
         <script>
-          // import {Router} from '@vaadin/router' / var Router = Vaadin.Router
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // var Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
