unify router outlet tagnames in demos (use divs)
Do not use the `<main>` tags to not assume anythign about the app structute, and to not confuse devs who might not know those tagnames.

Keep `<main>` if it is used alongside with `<nav>`.

--- a/demo/vaadin-router-getting-started-demos.html
+++ b/demo/vaadin-router-getting-started-demos.html
@@ -48,7 +48,7 @@
       <template preserve-content>
         <a href="/">Home</a>
         <a href="/users">Users</a>
-        <main id="outlet"></main>
+        <div id="outlet"></div>
 
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
