--- a/demo/vaadin-router-redirect-demos.html
+++ b/demo/vaadin-router-redirect-demos.html
@@ -86,7 +86,7 @@
         <a href="/admin">Admin</a>
         <a href="/login">Login</a>
         <a href="/logout">Logout</a>
-        <main id="outlet"></main>
+        <div id="outlet"></div>
 
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
@@ -131,7 +131,7 @@
     <vaadin-demo-snippet id="vaadin-router-redirect-demos-3" iframe-src="iframe.html">
       <template preserve-content>
         <button id="trigger">Open <code>/user/you-know-who</code></button>
-        <main id="outlet"></main>
+        <div id="outlet"></div>
 
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
